# crescer

./: .gitignore  Autenticacao.py  LICENSE  config.yml  instructions.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: Pesquisa.py  altair_charts.py  utils.py
app/.streamlit/: config.toml
app/dfs_perguntas/: pergunta_1.csv  pergunta_10.csv  pergunta_11.csv  pergunta_12.csv  pergunta_2.csv  pergunta_3.csv  pergunta_4.csv  pergunta_5.csv  pergunta_6.csv  pergunta_7.csv  pergunta_8.csv  pergunta_9.csv
app/pages/: Legenda.py  legenda.csv
