[tool.poetry]
name = "crescer"
version = "0.1.0"
description = ""
authors = ["Lucas Lago <lukemartinslagonit@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
python-docx = "^1.1.2"
streamlit = "^1.37.0"
altair = "^5.3.0"
plotly = "^5.23.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
